# telegram_updates_tweets

./: .gitignore  Dockerfile  README.md  README.md.tmpl  README.rst  pyproject.toml
githooks/: pre-commit
telegram_updates_tweets/: __main__.py  publish.py
tests/: test_telegram_updates_tweets.py
