[tool.poetry]
name = "telegram_updates_tweets"
version = "0.1.0"
description = ""
authors = ["Alexander Jahn <jahn.alexander@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
telethon = "^1.18.2"
tweepy = "^3.10.0"
click = "^7.1.2"
pymongo = "^3.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
poetry-publish = "^0.4.0"

[tool.poetry.scripts]
publish = 'telegram_updates_tweets.publish:publish'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
