[tool.poetry]
name = "telegram_updates_tweets"
version = "0.1.1"
description = "This package monitors the number of participants in a telegram channel and can post gains/losses updates to twitter"
authors = ["Alexander Jahn <jahn.alexander@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
telethon = "^1.18.2"
tweepy = "^3.10.0"
click = "^7.1.2"
pymongo = "^3.11.2"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
