[tool.poetry]
name = "telegram_updates_tweets"
version = "0.1.3"
description = "This package monitors the number of participants in a telegram channel and can post gains/losses updates to twitter"
authors = ["Alexander Jahn <jahn.alexander@gmail.com>"]
keywords = ["twitter-bot", "telegram-bot"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/AlxndrJhn/telegram_updates_tweets"
repository = "https://github.com/AlxndrJhn/telegram_updates_tweets"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
telethon = "^1.18.2"
tweepy = "^3.10.0"
click = "^7.1.2"
pymongo = { version = "^3.11.2", optional = true }
matplotlib = { version = "^3.3.3", optional = true }
Flask = { version = "^1.1.2", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[tool.poetry.extras]
logging = ["pymongo", "matplotlib"]
monitoring = ["Flask"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
